Minor changes to notebook

--- a/code_illustration.ipynb
+++ b/code_illustration.ipynb
@@ -509,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -576,7 +576,7 @@
        "       [ 2,  6]])"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -589,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -599,7 +599,7 @@
      "output_type": "stream",
      "text": [
       "Q-table dimensions:  (3, 5, 10, 10)\n",
-      "First shift: \n",
+      "[diff = 2, period = 0] First shift: \n",
       "\thome team: DAVID DESHARNAIS, BRENDAN GALLAGHER, MAX PACIORETTY \n",
       "\taway team: KYLE TURRIS, JAKOB SILFVERBERG, COLIN GREENING \n",
       "\tQvalue: 2.77\n"
@@ -620,7 +620,8 @@
     "plList = list(mtlott.player_classes.loc[mtlott.lineShifts['playersID'].iloc[iShift][0]]['firstlast'].values) + list(mtlott.player_classes.loc[mtlott.lineShifts['playersID'].iloc[iShift][1]]['firstlast'].values)\n",
     "diff   = mtlott.recode_differential( mtlott.lineShifts.iloc[iShift].differential )\n",
     "period = mtlott.recode_period( mtlott.lineShifts.iloc[iShift].period )\n",
-    "print('First shift: \\n\\thome team: %s, %s, %s \\n\\taway team: %s, %s, %s \\n\\tQvalue: %.2f' %(plList[0], plList[1], plList[2], plList[3], plList[4], plList[5], Qvalues[period,diff,linesCode[iShift,0], linesCode[iShift,1]]) )\n",
+    "q_values = Qvalues[period,diff,linesCode[iShift,0], linesCode[iShift,1]]\n",
+    "print('[diff = %d, period = %d] First shift: \\n\\thome team: %s, %s, %s \\n\\taway team: %s, %s, %s \\n\\tQvalue: %.2f' %(diff, period, plList[0], plList[1], plList[2], plList[3], plList[4], plList[5], q_values) )\n",
     "                                                                          \n"
    ]
   },
