notebook::recommend lines: some verifications before migrating to .py

--- a/recommend_lines.ipynb
+++ b/recommend_lines.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -74,7 +74,7 @@
        "'/Users/luisd/dev/NHL_stats/data/PlayByPlay'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -96,7 +96,7 @@
        "'/Users/luisd/dev/NHL_stats/ReinforcementLearning/NHL/playerstats/offVSdef/Automatic_classification/MODEL_perceptron_1layer_10units_relu'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -218,6 +218,60 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# ==== Second the players data\n",
+    "\n",
+    "def get_players_classes_simplified(repoModel, data_for_game, number_of_games):\n",
+    "    \"\"\"\n",
+    "    Calculates (dataframe with) all player's classes.\n",
+    "    Updates the 'data for game' structure with it; also returns it.\n",
+    "    Usage:\n",
+    "        repoModel = ... # here goes the directory where your model is saved.\n",
+    "        # Montreal received Ottawa on march 13, 2013\n",
+    "        gameId = get_game_id(home_team_abbr='MTL', date_as_str='2013-03-13')\n",
+    "        season      =   '20122013'\n",
+    "        mtlott      =   Game(repoPbP, repoPSt, season, gameId=gameId )\n",
+    "        #\n",
+    "        players_classes = get_players_classes(repoModel, mtlott, number_of_games=30)\n",
+    "        # this is equivalent to ask 'mtlott' for the data; so:\n",
+    "        assert players_classes.equals(mtlott.player_classes)\n",
+    "    \"\"\"\n",
+    "    # Need to load the data pre-processing variables\n",
+    "    preprocessing  =   pickle.load(open(path.join(repoModel, 'baseVariables.p'), 'rb'))\n",
+    "\n",
+    "    # Need to load the classification model (for players' predicted ranking on trophies voting lists)\n",
+    "    classifier          =   {'sess':tf.Session(), 'annX':[], 'annY':[]}\n",
+    "    saver               =   tf.train.import_meta_graph(path.join(repoModel, path.basename(repoModel) + '.meta'))\n",
+    "    graph               =   classifier['sess'].graph\n",
+    "    classifier['annX']  =   graph.get_tensor_by_name('Input_to_the_network-player_features:0')\n",
+    "    classifier['annY']  =   graph.get_tensor_by_name('prediction:0')\n",
+    "    saver.restore(classifier['sess'], tf.train.latest_checkpoint(path.join(repoModel, './')))\n",
+    "\n",
+    "    # Pick players stats - last 'n' games \n",
+    "#     data_for_game.pull_line_shifts(team='both', minduration=20)\n",
+    "#     data_for_game.lineShifts\n",
+    "#     data_for_game.pick_regulartime()\n",
+    "#     data_for_game.pick_equalstrength()\n",
+    "    data_for_game.pull_players_classes(preprocessing, classifier, nGames=number_of_games)\n",
+    "    return data_for_game.player_classes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 9,
    "metadata": {
     "collapsed": false
@@ -253,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -279,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -291,263 +345,6 @@
       "/Users/luisd/sw/anaconda3/lib/python3.6/site-packages/sklearn/base.py:315: UserWarning: Trying to unpickle estimator PCA from version 0.19.1 when using version 0.18.1. This might lead to breaking code or invalid results. Use at your own risk.\n",
       "  UserWarning)\n"
      ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style>\n",
-       "    .dataframe thead tr:only-child th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: left;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>class</th>\n",
-       "      <th>firstlast</th>\n",
-       "      <th>pred_ross</th>\n",
-       "      <th>pred_selke</th>\n",
-       "      <th>team</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>2</td>\n",
-       "      <td>DAVID DESHARNAIS</td>\n",
-       "      <td>0.152358</td>\n",
-       "      <td>0.271184</td>\n",
-       "      <td>MTL</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>2</td>\n",
-       "      <td>LARS ELLER</td>\n",
-       "      <td>0.168679</td>\n",
-       "      <td>0.419280</td>\n",
-       "      <td>MTL</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>2</td>\n",
-       "      <td>ALEX GALCHENYUK</td>\n",
-       "      <td>0.043458</td>\n",
-       "      <td>0.240716</td>\n",
-       "      <td>MTL</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>2</td>\n",
-       "      <td>BRENDAN GALLAGHER</td>\n",
-       "      <td>0.137976</td>\n",
-       "      <td>0.347929</td>\n",
-       "      <td>MTL</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>27</th>\n",
-       "      <td>1</td>\n",
-       "      <td>MAX PACIORETTY</td>\n",
-       "      <td>0.301386</td>\n",
-       "      <td>0.283442</td>\n",
-       "      <td>MTL</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>31</th>\n",
-       "      <td>1</td>\n",
-       "      <td>TOMAS PLEKANEC</td>\n",
-       "      <td>0.357017</td>\n",
-       "      <td>0.399162</td>\n",
-       "      <td>MTL</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>228</th>\n",
-       "      <td>2</td>\n",
-       "      <td>CHRIS NEIL</td>\n",
-       "      <td>0.191784</td>\n",
-       "      <td>0.443006</td>\n",
-       "      <td>OTT</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>236</th>\n",
-       "      <td>0</td>\n",
-       "      <td>ZACK SMITH</td>\n",
-       "      <td>0.100964</td>\n",
-       "      <td>0.439869</td>\n",
-       "      <td>OTT</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>237</th>\n",
-       "      <td>2</td>\n",
-       "      <td>MARK STONE</td>\n",
-       "      <td>0.101008</td>\n",
-       "      <td>0.339734</td>\n",
-       "      <td>OTT</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>238</th>\n",
-       "      <td>0</td>\n",
-       "      <td>KYLE TURRIS</td>\n",
-       "      <td>0.102196</td>\n",
-       "      <td>0.388576</td>\n",
-       "      <td>OTT</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>241</th>\n",
-       "      <td>0</td>\n",
-       "      <td>MIKA ZIBANEJAD</td>\n",
-       "      <td>0.060674</td>\n",
-       "      <td>0.395046</td>\n",
-       "      <td>OTT</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>249</th>\n",
-       "      <td>2</td>\n",
-       "      <td>ERIK CONDRA</td>\n",
-       "      <td>0.105223</td>\n",
-       "      <td>0.315759</td>\n",
-       "      <td>OTT</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>281</th>\n",
-       "      <td>2</td>\n",
-       "      <td>RYAN WHITE</td>\n",
-       "      <td>0.136709</td>\n",
-       "      <td>0.319078</td>\n",
-       "      <td>MTL</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>389</th>\n",
-       "      <td>2</td>\n",
-       "      <td>TRAVIS MOEN</td>\n",
-       "      <td>0.058123</td>\n",
-       "      <td>0.301517</td>\n",
-       "      <td>MTL</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>621</th>\n",
-       "      <td>2</td>\n",
-       "      <td>JAKOB SILFVERBERG</td>\n",
-       "      <td>0.170364</td>\n",
-       "      <td>0.460437</td>\n",
-       "      <td>OTT</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>656</th>\n",
-       "      <td>0</td>\n",
-       "      <td>BRIAN GIONTA</td>\n",
-       "      <td>0.089530</td>\n",
-       "      <td>0.421456</td>\n",
-       "      <td>MTL</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>813</th>\n",
-       "      <td>0</td>\n",
-       "      <td>COLIN GREENING</td>\n",
-       "      <td>0.073467</td>\n",
-       "      <td>0.385268</td>\n",
-       "      <td>OTT</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>871</th>\n",
-       "      <td>0</td>\n",
-       "      <td>JIM O'BRIEN</td>\n",
-       "      <td>0.008751</td>\n",
-       "      <td>0.372701</td>\n",
-       "      <td>OTT</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1035</th>\n",
-       "      <td>1</td>\n",
-       "      <td>MICHAEL RYDER</td>\n",
-       "      <td>0.357081</td>\n",
-       "      <td>0.219747</td>\n",
-       "      <td>MTL</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1164</th>\n",
-       "      <td>2</td>\n",
-       "      <td>GABRIEL DUMONT</td>\n",
-       "      <td>0.140161</td>\n",
-       "      <td>0.300612</td>\n",
-       "      <td>MTL</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1219</th>\n",
-       "      <td>2</td>\n",
-       "      <td>DANIEL ALFREDSSON</td>\n",
-       "      <td>0.194518</td>\n",
-       "      <td>0.514697</td>\n",
-       "      <td>OTT</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1374</th>\n",
-       "      <td>2</td>\n",
-       "      <td>GUILLAUME LATENDRESSE</td>\n",
-       "      <td>0.093440</td>\n",
-       "      <td>0.294345</td>\n",
-       "      <td>OTT</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1380</th>\n",
-       "      <td>2</td>\n",
-       "      <td>COLBY ARMSTRONG</td>\n",
-       "      <td>0.104906</td>\n",
-       "      <td>0.330882</td>\n",
-       "      <td>MTL</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1438</th>\n",
-       "      <td>0</td>\n",
-       "      <td>KASPARS DAUGAVINS</td>\n",
-       "      <td>0.014635</td>\n",
-       "      <td>0.383701</td>\n",
-       "      <td>OTT</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      class              firstlast  pred_ross  pred_selke team\n",
-       "8         2       DAVID DESHARNAIS   0.152358    0.271184  MTL\n",
-       "9         2             LARS ELLER   0.168679    0.419280  MTL\n",
-       "13        2        ALEX GALCHENYUK   0.043458    0.240716  MTL\n",
-       "14        2      BRENDAN GALLAGHER   0.137976    0.347929  MTL\n",
-       "27        1         MAX PACIORETTY   0.301386    0.283442  MTL\n",
-       "31        1         TOMAS PLEKANEC   0.357017    0.399162  MTL\n",
-       "228       2             CHRIS NEIL   0.191784    0.443006  OTT\n",
-       "236       0             ZACK SMITH   0.100964    0.439869  OTT\n",
-       "237       2             MARK STONE   0.101008    0.339734  OTT\n",
-       "238       0            KYLE TURRIS   0.102196    0.388576  OTT\n",
-       "241       0         MIKA ZIBANEJAD   0.060674    0.395046  OTT\n",
-       "249       2            ERIK CONDRA   0.105223    0.315759  OTT\n",
-       "281       2             RYAN WHITE   0.136709    0.319078  MTL\n",
-       "389       2            TRAVIS MOEN   0.058123    0.301517  MTL\n",
-       "621       2      JAKOB SILFVERBERG   0.170364    0.460437  OTT\n",
-       "656       0           BRIAN GIONTA   0.089530    0.421456  MTL\n",
-       "813       0         COLIN GREENING   0.073467    0.385268  OTT\n",
-       "871       0            JIM O'BRIEN   0.008751    0.372701  OTT\n",
-       "1035      1          MICHAEL RYDER   0.357081    0.219747  MTL\n",
-       "1164      2         GABRIEL DUMONT   0.140161    0.300612  MTL\n",
-       "1219      2      DANIEL ALFREDSSON   0.194518    0.514697  OTT\n",
-       "1374      2  GUILLAUME LATENDRESSE   0.093440    0.294345  OTT\n",
-       "1380      2        COLBY ARMSTRONG   0.104906    0.330882  MTL\n",
-       "1438      0      KASPARS DAUGAVINS   0.014635    0.383701  OTT"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -556,7 +353,28 @@
     "# Visualize all player's classes: 0=def, 1=off, 2=neutral\n",
     "players_classes = get_players_classes(repoModel, data_for_game=mtlott, number_of_games=30)\n",
     "assert players_classes.equals(mtlott.player_classes)\n",
-    "mtlott.player_classes\n"
+    "# mtlott.player_classes\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/luisd/sw/anaconda3/lib/python3.6/site-packages/sklearn/base.py:315: UserWarning: Trying to unpickle estimator PCA from version 0.19.1 when using version 0.18.1. This might lead to breaking code or invalid results. Use at your own risk.\n",
+      "  UserWarning)\n"
+     ]
+    }
+   ],
+   "source": [
+    "players_classes_simplified = get_players_classes_simplified(repoModel, data_for_game=mtlott, number_of_games=30)\n",
+    "assert players_classes_simplified.equals(players_classes)"
    ]
   },
   {
