NHL: added a few notebooks for validation

--- a/code_illustration.ipynb
+++ b/code_illustration.ipynb
@@ -12,10 +12,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import itertools\n",
@@ -47,14 +45,16 @@
    "metadata": {
     "collapsed": true
    },
+
    "outputs": [],
    "source": [
     "# Pointers to the data\n",
     "# repoCode    =   '/Users/younes_zerouali/Documents/Stradigi/Code/NHL_stats_SL'\n",
-    "repoCode    =   '/Users/luisd/dev/NHL_stats'\n",
-    "#db_root     =   '/home/younesz/Documents/Hockey'        #This is the location of the Hockey database\n",
+    "# repoCode    =   '/Users/luisd/dev/NHL_stats'\n",
+    "repoCode    =   '/home/younesz/Documents/Code/NHL_stats_SL'\n",
+    "db_root     =   '/home/younesz/Documents/Databases/Hockey'        #This is the location of the Hockey database\n",
     "# db_root     =   '/Users/younes_zerouali/Documents/Stradigi/Databases/Hockey'\n",
-    "db_root     =   '/Users/luisd/dev/NHL_stats/data'\n",
+    "# db_root     =   '/Users/luisd/dev/NHL_stats/data'\n",
     "repoPbP     =   path.join(db_root, 'PlayByPlay')\n",
     "repoPSt     =   path.join(db_root, 'PlayerStats/player')\n",
     "repoModel   =   path.join(repoCode, 'ReinforcementLearning/NHL/playerstats/offVSdef/Automatic_classification/MODEL_backup_trainedonallseasons_rankstatprediction')\n",
@@ -120,6 +120,7 @@
    "metadata": {
     "collapsed": false
    },
+
    "outputs": [],
    "source": [
     "# ==== Before starting, recompute the model\n",
@@ -263,7 +264,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/luisd/sw/anaconda3/lib/python3.6/site-packages/ipykernel/__main__.py:9: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n"
+      "/usr/local/lib/python3.5/dist-packages/ipykernel_launcher.py:9: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "  if __name__ == '__main__':\n"
      ]
     }
    ],
@@ -297,28 +299,27 @@
    },
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/Users/luisd/sw/anaconda3/lib/python3.6/site-packages/sklearn/base.py:315: UserWarning: Trying to unpickle estimator PCA from version 0.19.1 when using version 0.18.1. This might lead to breaking code or invalid results. Use at your own risk.\n",
-      "  UserWarning)\n"
+      "INFO:tensorflow:Restoring parameters from /home/younesz/Documents/Code/NHL_stats_SL/ReinforcementLearning/NHL/playerstats/offVSdef/Automatic_classification/MODEL_perceptron_1layer_10units_relu/MODEL_perceptron_1layer_10units_relu\n"
      ]
     },
     {
      "data": {
       "text/html": [
        "<div>\n",
-       "<style>\n",
-       "    .dataframe thead tr:only-child th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: left;\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
        "    }\n",
        "\n",
        "    .dataframe tbody tr th {\n",
        "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
        "    }\n",
        "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
@@ -1225,7 +1226,7 @@
     "# ==== Now we want to evaluate the value of the first shift for the (home team)\n",
     "\n",
     "# Load the Qvalues table\n",
-    "Qvalues = pickle.load( open(path.join(repoCode, 'ReinforcementLearning/NHL/playbyplay/data/stable/RL_action_values.p'), 'rb') )['action_values']\n",
+    "Qvalues = pickle.load( open(path.join(repoCode, 'ReinforcementLearning/NHL/playbyplay/data/RL_action_values.p'), 'rb') )['action_values']\n",
     "\n",
     "# Visualize it dimensions (period x differential x away line's code x home line's code)\n",
     "print('Q-table dimensions: ', Qvalues.shape)\n",
@@ -1242,10 +1243,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [],
    "source": []
   }
@@ -1266,7 +1265,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
