Changes to the main functions to comply with Luis' modifs (code factorization) - notebooks updated accordingly - need to test effect on Luis' notebooks

--- a/Qvalue_validation_singleTeam_correlation.ipynb
+++ b/Qvalue_validation_singleTeam_correlation.ipynb
@@ -7,7 +7,8 @@
    "outputs": [],
    "source": [
     "from ReinforcementLearning.NHL.playerstats.nhl_player_stats import *\n",
-    "from ReinforcementLearning.NHL.playbyplay.game import *"
+    "from ReinforcementLearning.NHL.playbyplay.game import *\n",
+    "from ReinforcementLearning.NHL.playbyplay.state_space import *"
    ]
   },
   {
@@ -23,8 +24,8 @@
     "db_root     =   '/home/younesz/Documents/Databases/Hockey'        #This is the location of the Hockey database\n",
     "# db_root     =   '/Users/younes_zerouali/Documents/Stradigi/Databases/Hockey'\n",
     "# db_root     =   '/Users/luisd/dev/NHL_stats/data'\n",
-    "repoPbP     =   path.join(db_root, 'PlayByPlay')\n",
-    "repoPSt     =   path.join(db_root, 'PlayerStats/player')\n",
+    "#repoPbP     =   path.join(db_root, 'PlayByPlay')\n",
+    "#repoPSt     =   path.join(db_root, 'PlayerStats/player')\n",
     "repoModel   =   path.join(repoCode, 'ReinforcementLearning/NHL/playerstats/offVSdef/Automatic_classification/MODEL_backup_trainedonallseasons_rankstatprediction')\n",
     "repoModel   =   path.join(repoCode, 'ReinforcementLearning/NHL/playerstats/offVSdef/Automatic_classification/MODEL_perceptron_1layer_10units_relu')\n",
     "repoSave    =   None #path.join(repoCode, 'ReinforcementLearning/NHL/playbyplay/data')"
@@ -101,7 +102,7 @@
     "homeTeam  =  'TOR'  \n",
     "\n",
     "# List all games\n",
-    "HSS    =  HockeySS(repoPbP, repoPSt)\n",
+    "HSS    =  HockeySS(db_root)\n",
     "HSS.list_all_games()\n",
     "\n",
     "# List team's home games\n",
@@ -120,14 +121,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO:tensorflow:Restoring parameters from /home/younesz/Documents/Code/NHL_stats_SL/ReinforcementLearning/NHL/playerstats/offVSdef/Automatic_classification/MODEL_perceptron_1layer_10units_relu/MODEL_perceptron_1layer_10units_relu\n"
+      "INFO:tensorflow:Restoring parameters from /home/younesz/Documents/Code/NHL_stats/ReinforcementLearning/NHL/playerstats/offVSdef/Automatic_classification/MODEL_perceptron_1layer_10units_relu/MODEL_perceptron_1layer_10units_relu\n"
      ]
     }
    ],
@@ -149,14 +150,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<ReinforcementLearning.NHL.playbyplay.game.Game at 0x7fac60a8d940>"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Game(db_root, Season(int(str(iS)[:4])), iG)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Game 500/15926: [=                                       ] 3%, completed"
+      "Game 150/513: [===========                             ] 29%, completed"
      ]
     }
    ],
@@ -166,7 +187,7 @@
     "for iS, iG in zip( games['season'], games['gcode'] ):\n",
     "    \n",
     "    # Get game data\n",
-    "    gameData = Game(repoPbP, repoPSt, iS, iG)\n",
+    "    gameData = Game(db_root, Season(int(str(iS)[:4])), iG)\n",
     "    gameData = get_players_classes(repoModel, gameData, preprocessing, classifier, 30)\n",
     "    \n",
     "    if len(gameData.player_classes)>0:\n",
