--- a/quality_check_nb_of_events_in_game.ipynb
+++ b/quality_check_nb_of_events_in_game.ipynb
@@ -14,7 +14,8 @@
    "outputs": [],
    "source": [
     "from ReinforcementLearning.NHL.playerstats.nhl_player_stats import *\n",
-    "from ReinforcementLearning.NHL.playbyplay.game import *"
+    "from ReinforcementLearning.NHL.playbyplay.game import *\n",
+    "from ReinforcementLearning.NHL.playbyplay.state_space import *"
    ]
   },
   {
@@ -30,8 +31,8 @@
     "db_root     =   '/home/younesz/Documents/Databases/Hockey'        #This is the location of the Hockey database\n",
     "# db_root     =   '/Users/younes_zerouali/Documents/Stradigi/Databases/Hockey'\n",
     "# db_root     =   '/Users/luisd/dev/NHL_stats/data'\n",
-    "repoPbP     =   path.join(db_root, 'PlayByPlay')\n",
-    "repoPSt     =   path.join(db_root, 'PlayerStats/player')\n",
+    "#repoPbP     =   path.join(db_root, 'PlayByPlay')\n",
+    "#repoPSt     =   path.join(db_root, 'PlayerStats/player')\n",
     "repoModel   =   path.join(repoCode, 'ReinforcementLearning/NHL/playerstats/offVSdef/Automatic_classification/MODEL_backup_trainedonallseasons_rankstatprediction')\n",
     "repoModel   =   path.join(repoCode, 'ReinforcementLearning/NHL/playerstats/offVSdef/Automatic_classification/MODEL_perceptron_1layer_10units_relu')\n",
     "repoSave    =   None #path.join(repoCode, 'ReinforcementLearning/NHL/playbyplay/data')"
@@ -39,7 +40,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "20142015"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "iSea.year_begin\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
@@ -50,19 +71,7 @@
      "text": [
       "Launching analysis\n",
       "\n",
-      "\tAnalysing season Season_20142015 (1/14): \n",
-      "\t"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'games' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-3-6cf8c1176f1f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     35\u001b[0m             \u001b[0mstdout\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwrite\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'\\r\\t'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     36\u001b[0m             \u001b[0;31m# the exact output you're looking for:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 37\u001b[0;31m             \u001b[0mstdout\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwrite\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Game %i/%i: [%-40s] %d%%, completed\"\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mcount\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mgames\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'='\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcount\u001b[0m \u001b[0;34m/\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mgames\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0;36m40\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m100\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mcount\u001b[0m \u001b[0;34m/\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mgames\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     38\u001b[0m             \u001b[0mstdout\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mflush\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     39\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'games' is not defined"
+      "\tAnalysing season Season_20142015 (1/14): \n"
      ]
     }
    ],
@@ -79,8 +88,8 @@
     "    \n",
     "    print('\\tAnalysing season %s (%i/%i): ' %(iS, seasons.index(iS)+1, len(seasons)) )\n",
     "    # List all games\n",
-    "    iSea   =  Season(iS)\n",
-    "    iSea.list_game_ids(repoPbP, repoPSt)\n",
+    "    iSea   =  Season( int(iS.replace('Season_', '')[:4]) )\n",
+    "    iSea.list_game_ids(db_root)\n",
     "    \n",
     "    # Loop on games\n",
     "    count  =  0\n",
