--- a/ReinforcementLearning/NHL/lines/Recommend Lines.ipynb
+++ b/ReinforcementLearning/NHL/lines/Recommend Lines.ipynb
@@ -34,13 +34,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/luisd/sw/anaconda3/envs/nhl_stats/lib/python3.6/importlib/_bootstrap.py:219: RuntimeWarning: compiletime version 3.5 of module 'tensorflow.python.framework.fast_tensor_util' does not match runtime version 3.6\n",
+      "  return f(*args, **kwds)\n"
+     ]
+    }
+   ],
    "source": [
     "import pickle\n",
+    "import datetime\n",
     "from os import path\n",
     "\n",
     "import numpy as np\n",
@@ -54,46 +64,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/luisd/dev/NHL_stats/ReinforcementLearning/NHL/playbyplay/playbyplay_data.py:54: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
-      "  gameInfo    =   gameInfo[gameInfo['gameDate']==date_as_str][gameInfo['teamAbbrev']==home_team_abbr]\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO:tensorflow:Restoring parameters from /Users/luisd/dev/NHL_stats/ReinforcementLearning/NHL/playerstats/offVSdef/Automatic_classification/MODEL_perceptron_1layer_10units_relu/MODEL_perceptron_1layer_10units_relu\n",
-      "Q-table dimensions:  (3, 5, 10, 10)\n",
-      "[diff = 2, period = 0] First shift: \n",
-      "\thome team: DAVID DESHARNAIS, BRENDAN GALLAGHER, MAX PACIORETTY \n",
-      "\taway team: KYLE TURRIS, JAKOB SILFVERBERG, COLIN GREENING \n",
-      "\tQvalue: 3.17\n",
-      "Q value dictionary has 16 entries\n",
-      "Best fitness: 50.33 by formation [(1380, 389, 8), (9, 1035, 1164), (13, 14, 656), (281, 27, 31)]\n",
-      "Best fitness: 51.67 by formation [(1380, 389, 8), (9, 1035, 1164), (13, 14, 281), (656, 27, 31)]\n",
-      "=======> Took 0.29 secs. to look at 1 first-lines; I think we have around 62.52 secs. to go\n",
-      "Best fitness: 51.67 by formation [(656, 27, 31), (1380, 389, 1035), (8, 9, 1164), (281, 13, 14)]\n",
-      "=======> Took 58.12 secs. to look at 219 first-lines; I think we have around 0.27 secs. to go\n",
-      "ALL DONE!!!!!!\n",
-      "================================\n",
-      "Best fitness: 51.67 by formation \n",
-      "[(656, 27, 31), (1380, 389, 1035), (8, 9, 1164), (281, 13, 14)], to play against \n",
-      "[[0, 2, 2], [0, 0, 2], [0, 2, 2], [0, 2, 2]]\n",
-      "================================\n",
-      "[(656, 27, 31), (1380, 389, 1035), (8, 9, 1164), (281, 13, 14)]\n",
-      "Line 1: 12 BRIAN GIONTA, 67 MAX PACIORETTY, 14 TOMAS PLEKANEC\n",
-      "Line 2: 20 COLBY ARMSTRONG, 27 TRAVIS MOEN, 17 MICHAEL RYDER\n",
-      "Line 3: 51 DAVID DESHARNAIS, 81 LARS ELLER, 37 GABRIEL DUMONT\n",
-      "Line 4: 25 RYAN WHITE, 27 ALEX GALCHENYUK, 11 BRENDAN GALLAGHER\n"
+      "Fetched game 20361, played on 2013-03-10\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/luisd/dev/NHL_stats/ReinforcementLearning/NHL/playbyplay/season.py:41: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "  ][self.games_info['teamAbbrev'] == home_team_abbr]\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'mtlott' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-4-bdd73f940209>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     19\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     20\u001b[0m \u001b[0;31m# prediction of the lines that the 'away' team will use:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 21\u001b[0;31m \u001b[0mdf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maway_lines\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmtlott\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_away_lines\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0maccept_repeated\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     22\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     23\u001b[0m \u001b[0;31m# === Now we get the indices in the Q-values tables corresponding to lines\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'mtlott' is not defined"
      ]
     }
    ],
@@ -102,15 +101,18 @@
     "\"\"\"Initialization\"\"\"\n",
     "db_root = '/Users/luisd/dev/NHL_stats/data'\n",
     "repoCode = '/Users/luisd/dev/NHL_stats'\n",
-    "# Montreal received Ottawa on march 13, 2013, let's convert game date to game code\n",
-    "gameId = Season.get_game_id(db_root=db_root, home_team_abbr='MTL', date_as_str='2013-03-13')\n",
-    "\n",
     "repoModel = path.join(repoCode,\n",
     "                           'ReinforcementLearning/NHL/playerstats/offVSdef/Automatic_classification/MODEL_perceptron_1layer_10units_relu')\n",
     "\n",
     "# Now lets get game data\n",
     "season = Season(db_root=db_root, year_begin=2012, repo_model=repoModel)  # Season.from_year_begin(2012) # '20122013'\n",
-    "mtlott = season.pick_game(gameId)\n",
+    "# Montreal received Ottawa on march 13, 2013, let's convert game date to game code\n",
+    "base_date=datetime.date(year=2013, month=3, day=13)\n",
+    "result = season.get_game_at_or_just_before(game_date=base_date, home_team_abbr='MTL')\n",
+    "assert(result is not None)\n",
+    "gameId, d = result\n",
+    "print(\"Fetched game %d, played on %s\" % (gameId, d))\n",
+    "\n",
     "\n",
     "# players_classes = mtlott.pull_players_classes_from_repo_address(True, True, 20, repoModel, number_of_games=30)\n",
     "\n",
@@ -196,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "scrolled": false
